--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
-    <h1>Hello from Dhanush CI/CD Project</h1>
+    <h1>Hello from Dhanush DevOps Pipeline v2</h1>
+
     <h2> Nan dan da LEO..LEO Dass</h2>
   </body>
 </html>
